--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-05-31 22:47:41 +0900 
+%% Created for Yuka Fujii at 2015-06-01 10:04:16 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{hundhausen1997,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1997cwh..conf..259H},
+	Author = {{Hundhausen}, A.~J.},
+	Booktitle = {Cosmic Winds and the Heliosphere},
+	Date-Added = {2015-06-01 01:04:08 +0000},
+	Date-Modified = {2015-06-01 01:04:16 +0000},
+	Editor = {{Jokipii}, J.~R. and {Sonett}, C.~P. and {Giampapa}, M.~S.},
+	Pages = {259},
+	Title = {{Coronal Mass Ejections}},
+	Year = 1997}
 
 @article{suzuki2007,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
