figure 1 is replaced by cgs-version figure

--- a/ms.tex
+++ b/ms.tex
@@ -412,7 +412,7 @@ In this regime, there are a number of current and near-future radio wave detecto
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[htbp]
-   \plotoneh{model_planetaryB.pdf}
+   \plotoneh{model_planetaryB_cgs.pdf}
    \caption{Planetary magnetic field as a function of age and planetary mass, based on the scaling of magnetic field of \citet{christensen2010} and the evolution of internal heat of \citet{burrows_et_al2001}.} %\memoDS{Can we change density to cgs in this figure?}
   \label{fig:planetaryB}
 \end{figure}
