scaling of radius of magnetic stand-off point is updated

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-01 10:04:16 +0900 
+%% Created for Yuka Fujii at 2015-06-01 18:47:54 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{joy2002,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2002JGRA..107.1309J},
+	Author = {{Joy}, S.~P. and {Kivelson}, M.~G. and {Walker}, R.~J. and {Khurana}, K.~K. and {Russell}, C.~T. and {Ogino}, T.},
+	Date-Added = {2015-06-01 09:47:49 +0000},
+	Date-Modified = {2015-06-01 09:47:54 +0000},
+	Doi = {10.1029/2001JA009146},
+	Eid = {1309},
+	Journal = {Journal of Geophysical Research (Space Physics)},
+	Keywords = {Magnetospheric Physics: Magnetopause, cusp, and boundary layers, Interplanetary Physics: Planetary bow shocks, Space Plasma Physics: Numerical simulation studies, Planetology: Solar System Objects: Jupiter, Planetology: Fluid Planets: Magnetospheres (2756), Jupiter, bow shock, magnetopause, solar wind, MHD},
+	Month = oct,
+	Pages = {1309},
+	Title = {{Probabilistic models of the Jovian magnetopause and bow shock locations}},
+	Volume = 107,
+	Year = 2002,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1029/2001JA009146}}
 
 @inproceedings{hundhausen1997,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
