scaling of radius of magnetic stand-off point is corrected

--- a/ms.tex
+++ b/ms.tex
@@ -369,9 +369,9 @@ The radius obtained for Jupiter from this equality is about a half of actual rad
 \begin{eqnarray}
 r_s 
 %&\sim & R_p \left( \frac{B^2}{8\pi m_{\rm p}nv^2} \right)^{1/6}  \\
-&=& r_{s,\,J} \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{\dot a}{5.2\mbox{AU}} \right)^{-1/3}  \\
+&=& r_{s,\,J} \left( \frac{B}{10~\mbox{G}} \right)^{1/3} \left( \frac{a}{5.2\mbox{AU}} \right)^{1/3}  \\
 && \times \left( \frac{\dot M_\star}{\dot M_\odot} \right)^{-1/6}  \left( \frac{\dot v}{v_{\odot }} \right)^{-1/6} \\
-&=& 11.3 \, R_J \left( \frac{B}{10~\mbox{G}} \right)^{1/3}  \left( \frac{\dot a}{5\mbox{AU}} \right)^{-1/3} \\
+&=& 11.3 \, R_J \left( \frac{B}{10~\mbox{G}} \right)^{1/3}  \left( \frac{a}{5\mbox{AU}} \right)^{1/3} \\
 && \times \left( \frac{\dot M_\star}{10^6 \dot M_\odot} \right)^{-1/6}  \left( \frac{\dot v}{10^{-1}v_{\odot }} \right)^{-1/6}
  \label{eq:stand-off-radius}
 \end{eqnarray}
@@ -489,7 +489,7 @@ Greater $B$ Produces Lower $F_\nu$}
 \label{ss:counterintuitive}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Number of particle which is trapped by planetary magnetosphere is
+Number of particles which are trapped by planetary magnetosphere is proportional to the magnetic stand-off point
 \begin{equation}
 n \propto \pi r_s^2
 \end{equation}
